--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     padding: 0px;
     margin: 0px;
 }
+
+html, body {
+    min-height: 100vh;
+}
  a {
     text-decoration: none;
     color: white;
@@ -25,6 +29,7 @@ h1 {
     text-align: center;
     font-family: 'Passion One', cursive;
     font-size: 126px;
+    font-variant: small-caps;
 }
 h2 {
     padding: 0px 10px 30px 40px;
@@ -33,6 +38,7 @@ h2 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 2px 2px 20px 2px;
     font-size: 16px;
+    font-weight: normal;
 }
 main {
     font-family: cursive;
@@ -51,7 +57,7 @@ p > main {
     margin-bottom: 40px;
 }
 .girassol {
-    min-width: 1230px;
+    max-width: 100%;
     height: 105vh;
     background-image: url(girassol.jpg);
     background-size: cover;
@@ -63,8 +69,18 @@ p > main {
     background-attachment: fixed;
 }
 .cartas {
+    max-width: 100%;
     background: black url(letras.jpg) center center/ cover no-repeat fixed;
-    margin: 0px
+    margin: 0px;
+    color: white;
+    height: 105vh;
+    text-shadow: 1px 1px 1px black;
+}
+
+.fundo {
+    background-color: rgba(0, 0, 0, 0.253);
+    width: 550px;
+    height: 500px;
 }
 footer {
     background-color: black;
@@ -75,4 +91,13 @@ footer {
 }
 a:hover {
     text-decoration: underline;
+}
+
+section {
+    padding-bottom: 70px;
+}
+
+.linhas {
+    padding-bottom: 70px;
+
 }
