--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
     padding-top: 50px;
     padding-bottom: 2px;
     font-variant: small-caps;
-    font-size: 600%;
+    font-size: 10vw;
     padding-left: 10px;
     padding-right: 10px;
     font-display:auto;
@@ -53,7 +53,7 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     font-family: cursive;
-    font-size: 2em;
+    font-size: 3.5vw;
     font-weight: bold;
     font-style: italic;
     background-color: white;
@@ -71,15 +71,17 @@ section {
 
 .fundo {
     background: black url(letras.jpg) center center/ cover no-repeat fixed;
-    color: white;
-    text-shadow: 2px 2px 2px black;
+    background-color: black;
 
 }
 /* Fundo da imagem de letras */
 
 .fundo > p {
-    background-color: rgba(0, 0, 0, 0.194);
-    width: 450px;
+    background-color: rgba(0, 0, 0, 0.267);
+    width: 650px;
+    display: inline-block;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.989);
 }
 
 footer {
