--- a/style.css
+++ b/style.css
@@ -59,12 +59,15 @@ section {
     background-color: white;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
 .imagem {
     color: white;
 }
 
 .girassol {
-    background: black url(girassol.jpg) center center/ cover no-repeat fixed;
+    background: black url(girassol.jpg) right center/ cover no-repeat fixed;
     color: white;
     text-shadow: 2px 2px 2px black;
 }
@@ -78,10 +81,10 @@ section {
 
 .fundo > p {
     background-color: rgba(0, 0, 0, 0.267);
-    width: 650px;
     display: inline-block;
     color: white;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.989);
+    padding-bottom: 25px;
 }
 
 footer {
